Min.Tests/Samples/ValidSamples/source-04.min
.year int = 2024
.year = .year - 1