Min.Tests/Samples/InvalidSamples/source-07.min
.year int = 2021 + "3"